# cmu15-418-spring2018

./: .gitignore  README.md
asst1-s18/: Makefile  README.md  mandelbrot-thread.ppm  submit.py
asst1-s18/common/: CycleTimer.h
asst1-s18/prog1_mandelbrot_threads/: CMakeLists.txt  main.cpp  mandelbrot.cpp
asst1-s18/prog1_mandelbrot_threads/.cache/clangd/index/: main.cpp.87C163463CED4D3C.idx  main.cpp.89AEB1B7BA51A1B4.idx  mandelbrot.cpp.C0966DA05F513AD1.idx  mandelbrot.cpp.C3B6B188DE629C1B.idx
asst1-s18/prog2_vecintrin/: CMU418intrin.cpp  Makefile  functions.cpp  main.cpp  vrun
asst1-s18/prog3_mandelbrot_ispc/: Makefile  main.cpp  mandelbrot.ispc
asst1-s18/prog4_sqrt/: Makefile  data.cpp  main.cpp  sqrt.ispc
asst1-s18/prog5_saxpy/: Makefile  main.cpp  saxpySerial.cpp  saxpyStreaming.cpp
asst2-s18/: Makefile  README.md  exclusive_scan_recursive.cpp
asst2-s18/render/: Makefile  checker.pl  cudaRenderer-previous.cu  cudaRenderer.cu  main.cpp  refRenderer.cpp  render_soln  sceneLoader.cpp
asst2-s18/saxpy/: Makefile  cudaSaxpy  main.cpp  saxpy.cu
asst2-s18/scan/: Makefile  checker.pl  cudaScan  main.cpp  scan.cu
